# simple_gpu

./: .gitignore  Doxyfile  INSTALL  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  simple_gpu-cpu.pc.in  simple_gpu-nvidia.pc.in  simplegpu_cpu.pc.in  simplegpu_nvidia.pc.in
.github/workflows/: documentation.yml
include/: gpu.h  simple_gpu.F90
src/: Makefile.am  gpu_cpu.c  gpu_nvidia.c
tests/: Makefile.am  test_basic.F90  test_cpu  test_cpu_basic  test_cpu_basic.F90  test_ddot.F90  test_ddot_cpu  test_dgeam.F90  test_dgeam_cpu  test_dgemm.F90  test_dgemm_cpu  test_dgemv.F90  test_dgemv_cpu  test_gpu_comparison.F90  test_sdot.F90  test_sdot_cpu  test_sgeam.F90  test_sgeam_cpu  test_sgemm.F90  test_sgemm_cpu  test_sgemv.F90  test_sgemv_cpu
